Add Swiper.js integration for review slider and update HTML structure and added all screen queries in css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "cSpell.ignoreWords": ["adipisicing"],
-  "cSpell.words": ["amet"]
+  "cSpell.words": ["amet"],
+  "liveServer.settings.port": 5501
 }
